--- a/Project.toml
+++ b/Project.toml
@@ -2,3 +2,7 @@ name = "FormulaOneMethod"
 uuid = "f243976a-5756-11e9-2994-eb72b43b8255"
 authors = ["Benoit Pasquier <pasquieb@uci.edu>"]
 version = "0.1.0"
+
+[deps]
+DualNumbers = "fa6b7ba4-c1ee-5f82-b5fc-ecf0adba8f74"
+HyperDualNumbers = "50ceba7f-c3ee-5a84-a6e8-3ad40456ec97"
