--- a/Project.toml
+++ b/Project.toml
@@ -8,3 +8,10 @@ DiffEqBase = "2b5f629d-d688-5b77-993f-72d75c75574e"
 DualNumbers = "fa6b7ba4-c1ee-5f82-b5fc-ecf0adba8f74"
 HyperDualNumbers = "50ceba7f-c3ee-5a84-a6e8-3ad40456ec97"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+
+[extras]
+Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
+
+[targets]
+test = ["Test", "ForwardDiff"]
