--- a/Project.toml
+++ b/Project.toml
@@ -1,15 +1,16 @@
 name = "F1Method"
 uuid = "d5605bae-6d76-11e9-2fd7-71bcf42edbaa"
 authors = ["Benoit Pasquier <pasquieb@uci.edu>"]
-version = "0.2.1"
+version = "0.3"
 
 [deps]
 DiffEqBase = "2b5f629d-d688-5b77-993f-72d75c75574e"
-DualNumbers = "fa6b7ba4-c1ee-5f82-b5fc-ecf0adba8f74"
-HyperDualNumbers = "50ceba7f-c3ee-5a84-a6e8-3ad40456ec97"
+ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 
 [compat]
+DiffEqBase = "6"
+ForwardDiff = "0.10"
 julia = "1.0"
 
 [extras]
