--- a/.travis.yml
+++ b/.travis.yml
@@ -10,8 +10,6 @@ julia:
   - 1.3
   - nightly
 
-matrix:
-
 notifications:
   email: false
 
@@ -19,7 +17,7 @@ codecov: true
 
 jobs:
   allow_failures:
-  - julia: nightly
+    - if: julia = nightly
   include:
     - stage: "Documentation"
       julia: 1.3
