--- a/.travis.yml
+++ b/.travis.yml
@@ -3,32 +3,24 @@ language: julia
 os:
   - osx
   - linux
+  - windows
 
 julia:
-  - 1.0
+  - 1
+  - 1.3
   - nightly
-
-# Uncomment the following lines to allow failures on nightly julia
-# (tests will run but not make your overall status red)
-matrix:
-  allow_failures:
-  - julia: nightly
 
 notifications:
   email: false
 
-#script: # the default script is equivalent to the following
-#  - if [[ -a .git/shallow ]]; then git fetch --unshallow; fi
-#  - julia -e 'Pkg.clone(pwd()); Pkg.build("F1Method"); Pkg.test("F1Method"; coverage=true)';
-
-after_success:
-  - julia -e 'using Pkg; cd(Pkg.dir("F1Method")); Pkg.add("Coverage"); using Coverage; Coveralls.submit(Coveralls.process_folder())';
-  - julia -e 'using Pkg; cd(Pkg.dir("F1Method")); Pkg.add("Coverage"); using Coverage; Codecov.submit(Codecov.process_folder())';
+codecov: true
 
 jobs:
+  allow_failures:
+    - julia: nightly
   include:
     - stage: "Documentation"
-      julia: 1.0
+      julia: 1.3
       os: linux
       script:
         - julia --project=docs/ -e 'using Pkg; Pkg.instantiate();
